tests/machine/x/erlang/group_items_iteration.error
exit status 127
tests/machine/x/erlang_new/group_items_iteration.erl:6:189: syntax error before: '}'
escript: There were compilation errors.
